<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sdop</string>
    <!-- action -->
    <string name="action_login">登录</string>
    <string name="action_auto_login">自动登录</string>
    <string name="action_test">测试</string>
    <string name="action_auto_GB">自动GB</string>
    <string name="action_auto_GB_FIGHT">对FIGHT自动</string>
    <string name="action_auto_GB_SPECIAL">对SPECIAL自动</string>
    <string name="action_auto_GB_SHOOT">对SHOOT自动</string>
    <string name="action_auto_GB_record">开启记录模式</string>
    <string name="action_auto_off">停止自动</string>
    <string name="action_auto_boss">自动总力/超总</string>
    <string name="action_auto_super_boss_start">自动超总</string>
    <string name="action_auto_super_boss_least_lv_3_start">自动超总(Lv3+)</string>
    <string name="action_auto_normal_boss_start">自动总力Lv30</string>
    <string name="action_auto_choose_leader_card">智能甲板</string>
    <string name="action_bought_item_4_sp">智能买SP药</string>
    <string name="action_equip_item_4_sp">装备SP药</string>
    <string name="action_map_quest">地图探索</string>
    <string name="action_sneaking">潜入任务</string>
    <string name="action_view_sneaking">查看潜入任务</string>
    <string name="action_auto_sneaking">自动潜入</string>
    <string name="action_ms_synthesis">MS合成</string>
    <string name="action_exit">退出</string>
    <!-- lable -->
    <string name="lable_required_time">剩余时间</string>
    <string name="lable_state">状态</string>
    <string name="lable_lock">LOCK</string>
    <string name="lable_click_cancel">点击取消！</string>
    <string name="lable_plase_set_main_choose">选择需要升级的MS</string>
    <!-- common -->
    <string name="msg_loading">Loading...</string>
    <string name="msg_please_wait">Please wait...</string>
    <string name="msg_now_proxy_running">正在执行任务代理...</string>
    <!-- some message -->
    <string name="msg_made_sure_exit">再按一次退出sdop！</string>
    <string name="msg_running_auto_login">【自动登录】进行中...</string>
    <string name="msg_login_success_and_plase_wait">web登录成功! 正在获取授权...</string>
    <string name="msg_auto_choose_leader_card_is_locked">【智能换MS和Pilot】被锁, 请耐心等待战斗结束！</string>
    <string name="msg_bought_item_4_sp_is_running">【智能买SP药】进行中...</string>
    <!-- sneaking -->
    <!-- ms synthesis -->
    <string name="msg_ms_synthesis_format">合成(%d)</string>
    <string name="msg_ms_synthesis_no_choose">没有正确选择MS，请重新选择...</string>
    <string name="msg_ms_synthesis_error">合成出现异常，请刷新后重新选择...</string>

</resources>