<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_login"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_login"/>
    
    <item
        android:id="@+id/action_auto_login"
        android:orderInCategory="51"
        android:showAsAction="never"
        android:title="@string/action_auto_login"/>
    
    <item
        android:id="@+id/action_test_hello"
        android:orderInCategory="55"
        android:showAsAction="never"
        android:title="@string/action_test_hello" android:enabled="false"/>
    
    <item
        android:id="@+id/action_auto_GB"
        android:orderInCategory="61"
        android:showAsAction="never"
        android:title="@string/action_auto_GB" android:enabled="false">
        <menu>
			<item
		        android:id="@+id/action_auto_GB_on"
		        android:orderInCategory="62"
		        android:showAsAction="never"
		        android:title="@string/action_auto_on"/>
			<item
		        android:id="@+id/action_auto_GB_off"
		        android:orderInCategory="63"
		        android:showAsAction="never"
		        android:title="@string/action_auto_off"/>
		</menu>
    </item>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>
